kein blauer rahmen und skyblue latex

--- a/_extensions/produnis/buechlein/buechlein.scss
+++ b/_extensions/produnis/buechlein/buechlein.scss
@@ -125,8 +125,8 @@ div.fakecalloutnote .my-callout-icon::before {
 /* Bilder zentriert */
 .figure {
   border-radius: 25px;
-  border: 1px solid gray;
-  border-color: rgb(100, 149, 237);
+  //border: 1px solid gray;
+  //border-color: rgb(100, 149, 237);
   margin: 20px;
   padding: 10px;
 }
